<resources>
    <string name="app_name">CalTrack</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="calorie_val">%1$d Cal</string>
    <string name="weight">Weight</string>
    <string name="weight_val">%1$d Kg</string>
    <string name="height">Height</string>
    <string name="height_val">%1$d Cm</string>
    <string name="serving_val">%1$d Pan</string>
    <string name="favorite">Favorite</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="achievement">Achievement</string>
    <string name="cal">Cal</string>
    <string name="calorie_burn">calorie burn</string>
    <string name="minute">mnt</string>
    <string name="time_active">time active</string>
    <string name="activity">Activity</string>
    <string name="level">level</string>
    <string name="active">Active</string>
    <string name="eat_what">Makan apa hari ini?</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_query">Search for a food/drink</string>
    <string name="add_meal">Add meal</string>
    <string name="total_calorie">Total Calorie :</string>
    <string name="food_name">Food Name</string>
    <string name="input_food_drink">Input food/drink name</string>
    <string name="calories">Calories</string>
    <string name="input_calorie_value">Input calorie value</string>
    <string name="tab_text_2">Custom Meal</string>
    <string name="tab_text_1">Search Meal</string>
    <string name="meal_icon">meal_icon</string>
    <string name="burn_icon">burn_icon</string>
    <string name="login">Login</string>
    <string name="login_welcome">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="input_fill">Please fill the input below here</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="cm_kg">CM / KG</string>
    <string name="activity_level">Activity Level</string>
    <string name="signup">Sign Up</string>
    <string name="logging_in">Logging in....</string>
    <string name="registering">Registering....</string>
    <string name="input_email">Insert Email</string>
    <string name="input_password">Insert password</string>
    <string name="drink_icon">drink_icon</string>
    <string name="add_icon">add_icon</string>
    <string name="remove_icon">remove_icon</string>
    <string name="login_failed">Login failed</string>
    <string name="register_fail">Register failed</string>
    <string name="data_fail">Failed to retrieve data</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_language">Change Language</string>
    <string name="reegister_success">Register success</string>
    <string name="age">Age</string>
    <string name="move_activity">Move Activity</string>
    <string name="dropdown_item">Dropdown Item</string>
    <string name="btn_back">Button Back</string>
    <string name="btn_galery">Button Galery</string>
    <string name="btn_shutter">Button Shutter Camera</string>
    <string name="btn_switch">Button Switch Camera</string>
    <string name="camera_fail">Opening camera failed</string>
    <string name="picture_fail">Take picture failed</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="calories_serving">Calories / Serving</string>
    <string name="serving">Serving</string>
    <string name="total_calories">Total Calories</string>
    <string name="snacks">Snacks</string>
    <string name="no_permission">Permission not granted</string>
    <string name="please_insert">Please Insert</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Activity">
        <item>Sedentary</item>
        <item>Light</item>
        <item>Moderate</item>
        <item>Active</item>
        <item>Very</item>
    </string-array>
</resources>