<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.censorresult.CensorResultActivity">

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="312dp"
        android:layout_height="183dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_food"
        style="@style/title_food"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/food_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_result" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="9dp"
        android:background="@color/gray59"
        app:layout_constraintTop_toBottomOf="@+id/tv_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/calories_serving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">

        <TextView
            style="@style/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_serving"/>

        <TextView
            style="@style/sub_title"
            android:id="@+id/tv_cal_serv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/calorie_val" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/serving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calories_serving">

        <TextView
            style="@style/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serving"/>

        <TextView
            style="@style/sub_title"
            android:id="@+id/tv_serv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/serving_val" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serving">

        <TextView
            style="@style/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_calories"/>

        <TextView
            style="@style/sub_title"
            android:id="@+id/tv_total_cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/calorie_val" />
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="18dp"
        android:background="@color/gray59"
        app:layout_constraintTop_toBottomOf="@+id/total_cal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioButton
        android:id="@+id/rb_breakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="18dp"
        android:text="@string/breakfast"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

    <RadioButton
        android:id="@+id/rb_lunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/lunch"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_breakfast" />

    <RadioButton
        android:id="@+id/rb_dinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/dinner"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_lunch" />

    <RadioButton
        android:id="@+id/rb_snacks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/snacks"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_dinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_food"
        style="@style/btn_food"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/btn_food"
        android:padding="12dp"
        android:text="@string/login"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rb_snacks" />

</androidx.constraintlayout.widget.ConstraintLayout>